# quant-modelling

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: dutch-auditor.md  dutch-dispatch.md  dutch-monitor.md  dutch-researcher.md  dutch-strategist.md  sentinel-analyst.md  sentinel-auditor.md  sentinel-builder.md  sentinel-dispatch.md  sentinel-reconciler.md  sentinel-reconciliation-dispatch.md  sentinel-researcher.md  sentinel-strategist.md
.docker/: Dockerfile.live  docker-compose.live.yml
.github/workflows/: build-live.yml  deploy-live.yml
autoresearch/: PROGRAM.md  audit.md  best_knobs.json  best_knobs_BTC_1h.json  best_knobs_ETH_15m.json  best_knobs_ETH_1h.json  best_knobs_SOL_15m.json  best_knobs_SOL_1h.json  best_knobs_SOL_5m.json  best_knobs_XRP_15m.json  best_knobs_XRP_1h.json  best_knobs_sentinel.json  build_plan.tsv  knobs.json  knobs_sentinel.json  reconciliation.md  reconciliation_state.json  results.tsv  results_pre_alpha.tsv  strategy.md
autoresearch/dutch/: PROGRAM.md  alerts.json  audit.md  backtest_results.tsv  backtest_results_btc.tsv  backtest_results_spot_diagnostic.tsv  best_knobs.json  best_knobs_BTC_15m.json  best_knobs_BTC_1h.json  best_knobs_BTC_5m.json  best_knobs_ETH_15m.json  best_knobs_ETH_1h.json  best_knobs_ETH_5m.json  best_knobs_SOL_15m.json  best_knobs_SOL_1h.json  best_knobs_SOL_5m.json  best_knobs_XRP_15m.json  best_knobs_XRP_1h.json  best_knobs_XRP_5m.json  dispatch_state.json  knobs.json  knobs_BTC_15m.json  knobs_BTC_1h.json  knobs_BTC_5m.json  knobs_ETH_15m.json  knobs_ETH_1h.json  knobs_ETH_5m.json  knobs_SOL_15m.json  knobs_SOL_1h.json  knobs_SOL_5m.json  knobs_XRP_15m.json  knobs_XRP_1h.json  knobs_XRP_5m.json  manual_BTC_15m.tsv  monitor_report.md  phase.json  researcher_ack.txt  results.tsv  strategy.md
autoresearch/experiments/: pulse_ideas_BTC_15m.json  pulse_ideas_ETH_5m.json
conf/: config.yaml
conf/monitoring/: prometheus.yml
crates/qm-fast/: Cargo.toml  pyproject.toml
crates/qm-fast/src/: lib.rs
crates/qm-fast/src/features/: calculator.rs  mod.rs  ring_buffer.rs
crates/qm-fast/src/orderbook/: l2_book.rs  mod.rs
deploy/: trade.service
docs/: PULSE_MODEL_PLAN.md  STEPS_5_8_REMAINING.md
docs/archive/: PULSE_MODEL_PLAN_COMPLETE.md
scripts/: analyze_agreement.py  analyze_dutch_bars.py  analyze_matching.py  analyze_trader_a_strategy.py  analyze_trader_a_trades.py  analyze_trader_b_strategy.py  analyze_trader_strategy.py  audit_alpha158.py  backtest_sentinel.py  backtest_trader_a_mm.py  baseline_report.py  calibrate_dutch_spreads.py  check_dutch.py  compare_bt_vs_live.py  compare_live_vs_backtest.py  compare_strategies.py  cpcv_validation.py  cpcv_validation_pulse.py  diagnose_bias.py  diagnose_pulse_accuracy.py  download_derivatives.py  download_funding.py  download_historical.py  download_trades.py  dutch_backtest.py  dutch_param_sweep.py  dutch_replay.py  experiment_pulse_ideas.py  explain_accuracy.py  fetch_trader_b_trades.py  fetch_trader_trades.py  kelly_backtest.py  monitor_pulse.py  parity_check.py  record_polymarket.py  record_ticks.py  regime_analysis.py  regime_validation.py  replay_backtest.py  run_all_sweeps.sh  (+17 more)
src/qm/: __init__.py
src/qm/backtest/: engine.py  (+6 more)
tests/: conftest.py
tests/unit/: test_core_types.py
(+240 files in other folders)
